# Judge-sender

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  _DEFAULTconfig.yml  build-submodule.sh  const.py  judge_server.py  judge_server.tgz  pyproject.toml  start  update.sh
common/: Config.py  DB.py  Logger.py  __init__.py
install_tutorial/: README.md  REAMD.md
judge_sender/: __init__.py  const.py  context.py  db_agent.py  error.py  file_collector.py  helper.py  receiver_agent.py  style_check_handler.py
par-judger/: _DEFAULTconfig.yml  judge_server.py
scripts/: banWordCheck.py  install.sh
scripts/install_tutorial/: distribute_setup.py
scripts/send_style_check_task/: helper.py  send_by_cid.py  send_by_list.py  send_by_pid.py  send_by_sid.py
style_check/: Code.py  ReportManager.py  StyleCheckerRunner.py  TestClass.py  __init__.py
