[tool.poetry]
name = "judge-sender"
version = "0.1.0"
description = ""
authors = ["Daniel1147 <r08922169@ntu.edu.tw>"]

[tool.poetry.dependencies]
python = "^3.6"
judge-common = {path = "dependency/judge_common-0.1.5-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
